Fix overflow mistake and add responsibility ( 400px)

--- a/css/styles.css
+++ b/css/styles.css
@@ -117,6 +117,10 @@ body {
   margin: 0;
 }
 
+.body--overflow {
+  overflow-y: hidden;
+}
+
 img {
   max-width: 100%;
   height: auto;
@@ -220,7 +224,7 @@ img {
   top: 0;
   right: 0;
   width: 100%;
-  height: 100vh;
+  height: 100%;
   background-color: rgba(0, 0, 0, 0.5);
 }
 
@@ -540,6 +544,7 @@ img {
     padding-top: 30px;
     border-top: 1px solid var(--gray);
     width: 100%;
+    overflow: auto;
   }
 
   .site-header__sitenav .sitenav__item:not(:last-child) {
@@ -602,6 +607,23 @@ img {
     padding-bottom: 10px;
   }
 
+  .site-header__sitenav--open {
+    width: 100%;
+    padding: 110px 20px 20px 20px;
+  }
+
+  .site-header__sitenav--open .sitenav__link {
+    font-size: 18px;
+  }
+
+  .toggler {
+    z-index: 151;
+  }
+
+  .toggler::before {
+    display: none;
+  }
+
   .toggler__img {
     width: 42px;
     height: 24px;
@@ -649,5 +671,54 @@ img {
 
   .skills__title {
     margin-bottom: 34px;
+  }
+}
+
+
+/* 400px */
+@media only screen and (max-width: 400px) {
+  .site-header {
+    padding-top: 36px;
+  }
+
+  .site-header__logo {
+    width: 71px;
+    height: 36px;
+  }
+
+  .toggler__img {
+    width: 33px;
+    height: 19px;
+  }
+
+  .hero__container {
+    padding-top: 20px;
+    padding-bottom: 20px;
+  }
+
+  .hero__title {
+    font-size: 24px;
+    margin-bottom: 20px;
+  }
+
+  .hero__text {
+    font-size: 14px;
+    margin-bottom: 35px;
+  }
+
+  .hero__img {
+    width: 299px;
+    height: 299px;
+  }
+
+  .button--big {
+    width: 100%;
+    padding: 18px;
+    font-size: 16px;
+  }
+
+  .skills__title {
+    font-size: 24px;
+    margin-bottom: 40px;
   }
 }
